--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
 			<artifactId>bootstrap</artifactId>
 			<version>4.0.0</version>
 		</dependency>
+		<dependency>
+	        <groupId>org.apache.commons</groupId>
+	        <artifactId>commons-io</artifactId>
+	        <version>1.3.2</version>
+    	</dependency>
 	</dependencies>
 
 	<build>
@@ -72,6 +77,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
