--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
 	        <artifactId>commons-io</artifactId>
 	        <version>1.3.2</version>
     	</dependency>
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-all</artifactId>
+		    <version>1.9.5</version>
+		    <scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
