--- a/pom.xml
+++ b/pom.xml
@@ -68,10 +68,10 @@
 			<version>9.1.4</version>
 		</dependency>
 		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.8.5</version>
-		</dependency>
+	        <groupId>org.apache.commons</groupId>
+	        <artifactId>commons-io</artifactId>
+	        <version>1.3.2</version>
+    	</dependency>
 	</dependencies>
 
 	<build>
