--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
 		    <version>1.9.5</version>
 		    <scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.xhtmlrenderer</groupId>
+			<artifactId>flying-saucer-pdf</artifactId>
+			<version>9.1.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
