--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
 			<artifactId>jquery</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery-maskedinput</artifactId>
+			<version>1.3.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
