correção arquivo de properties para heroku

--- a/src/main/resources/heroku.properties
+++ b/src/main/resources/heroku.properties
@@ -1,7 +1,7 @@
 #heroku nao cria tabelas
 spring.jpa.show-sql=true
 spring.datasource.url=${CLEARDB_DATABASE_URL}
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
