--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/colabassistant
-spring.datasource.username=root
-spring.datasource.password=univille
+spring.datasource.username=bob
+spring.datasource.password=bob
 
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
