--- a/src/main/resources/heroku.properties
+++ b/src/main/resources/heroku.properties
@@ -1,6 +1,7 @@
 #heroku nao cria tabelas
 spring.jpa.show-sql=true
 spring.datasource.url=${CLEARDB_DATABASE_URL}
+spring.datasource.maxActive=3
 spring.jpa.hibernate.ddl-auto=create
 
 spring.thymeleaf.check-template-location=true
