--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -27,6 +27,7 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -70,6 +71,32 @@
 			<artifactId>jquery</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery-maskedinput</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+		<dependency>
+	     <groupId>org.apache.commons</groupId>
+	     <artifactId>commons-io</artifactId>
+	     <version>1.3.2</version>
+    </dependency>
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-all</artifactId>
+		    <version>1.9.5</version>
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.xhtmlrenderer</groupId>
+			<artifactId>flying-saucer-pdf</artifactId>
+			<version>9.1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>1.8.10</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -80,6 +107,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
