inicio funcao de enviar emails

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,15 @@ spring.datasource.password=bob
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+
+#spring-boot-starter-mail properties
+spring.mail.host:smtp.gmail.com
+spring.mail.port:465
+spring.mail.username:springboot.dacs@gmail.com
+spring.mail.password:univille2018
+spring.mail.properties.mail.smtp.auth: true
+spring.mail.properties.mail.smtp.starttls.enable: true
+spring.mail.properties.mail.smtp.starttls.required: true
+spring.mail.properties.mail.smtp.ssl.enable = true
+spring.mail.test-connection=true
