--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,4 @@ spring.mail.properties.mail.smtp.auth: true
 spring.mail.properties.mail.smtp.starttls.enable: true
 spring.mail.properties.mail.smtp.starttls.required: true
 spring.mail.properties.mail.smtp.ssl.enable = true
-spring.mail.test-connection=true
+spring.mail.test-connection=false
