--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password=bob
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+assistiviAccessoryImage.path=C:\\ProjCOLABAssistant\\src\\main\\resources\\static\\image\\assistiveaccessory\\
