Persistido a url da imagem do acessório assistivo no banco

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-assistiviAccessoryImage.path=C:\\ProjCOLABAssistant\\src\\main\\resources\\static\\image\\assistiveaccessory\\
+#assistiviAccessoryImage.path=C:\\ProjCOLABAssistant\\src\\main\\resources\\static\\image\\assistiveaccessory\\
