--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,10 @@
 			<artifactId>pdfbox</artifactId>
 			<version>1.8.10</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
