varias e varias e varias correcoes

--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,23 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>docker-maven-plugin</artifactId>
+				<version>0.4.14</version>
+				<configuration>
+				 <imageName>colabassistantdockerimage</imageName>
+                 <baseImage>frolvlad/alpine-oraclejdk8:slim</baseImage>
+                 <entryPoint>["java", "-jar", "/${project.build.finalName}.jar", "-Dspring.profiles.active=prod"]</entryPoint>
+					<resources>
+						<resource>
+							<targetPath>/</targetPath>
+							<directory>${project.build.directory}</directory>
+							<include>${project.build.finalName}.jar</include>
+						</resource>
+					</resources>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
